article height fixed on mobile + limit added for the length of the article in the admin pannel

--- a/resources/assets/sass/component/home.scss
+++ b/resources/assets/sass/component/home.scss
@@ -216,6 +216,9 @@
             height: 187px;
           }
           @media screen and (max-width: 920px) {
+            height: 209px;
+          }
+          @media screen and (max-width: 800px) {
             height: 309px;
           }
           &__wrapper {
